chore: fixed overflow-x on home page

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @import "tailwindcss";
 
 
+html, body {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 #root {
   min-height: 100vh;
   max-width: 1440px;
